# c-template

./: .gitignore  CMakeLists.txt  README.md  main.c  meson.build  run.sh
src/: main.c
subprojects/: cexception.wrap  datatype99.wrap  interface99.wrap  mimalloc.wrap  raylib.wrap  stc.wrap
